ftps.yaml
apiVersion: v1  
kind: Service
metadata:
  name: ftps
spec:
  type: nodePort
  selector:
    app: ftps
  ports:
    - targetPort: 21
      port: 21
      nodePort: 21

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps-deployment
  labels:
    app: ftps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps
        imagePullPolicy: Never
        ports:
        - containerPort: 21
