grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
  
apiVersion: v1  
kind: Service
metadata:
  name: grafana-service
spec:
  #type: NodePort
  type: ClusterIP
  selector:
    app : grafana
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - targetPort: 3000
      port: 3000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      #nodePort: 3000
