influxdb.yaml
apiVersion: v1  
kind: Service
metadata:
  name: influxdb
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
    - targetPort: 8086
      port: 8086

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      volumes:

      containers:
      - name: influxdb
        image: influxdb
        imagePullPolicy: Never
        ports:
        - containerPort: 8086
        volumeMounts:
          - name: influxdb-volume
            mountPath: /var/lib/influxdb
          - name: docker
            mountPath: "/var/run/docker.sock"
      volumes:
      - name: influxdb-volume
        persistentVolumeClaim:
          claimName: influxdb-volume-claim
      - name: docker
        hostPath:
          path: /var/run/docker.sock
