nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https

---
  
apiVersion: v1  
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app : nginx
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - targetPort: 80
      port: 80
      name: http
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
    - targetPort: 443
      port: 443
      name: https
