tig_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  type: NodePort
  selector:
    service: grafana
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - targetPort: 3000
      port: 3000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
