wordpress.yaml
apiVersion: v1  
kind: Service
metadata:
  name: wp-service
spec:
  type: NodePort
  selector:
    app: wp
  ports:
    - targetPort: 5500
      port: 5500
      nodePort: 5500

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  labels:
    app: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp
  template:
    metadata:
      labels:
        app: wp
    spec:
      containers:
      - name: wp
        image: wordpress
        imagePullPolicy: Never
        ports:
        - containerPort: 5500
