ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: ingress
   #annotations:
     #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80
  rules:
   - http:
       paths:
       - path: /
         backend:
           serviceName: nginx-service
           servicePort: 80
      #  - path: /
      #    backend:
      #      serviceName: nginx-service
      #      servicePort: 443
